# nexus3-python-client

./: README.md  docker-compose.yml  pyproject.toml  tox.ini
examples/: __init__.py  nexus3-client-example.py
nexus3client/: __init__.py  client.py  config.py
tests/: test_nexus3client.py
